--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "coolors-io",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Parse a coolors URL into an array of hex strings",
   "main": "lib/index.js",
-  "types": "lib/index.d.ts"
+  "types": "lib/index.d.ts",
   "scripts": {
     "test": "jest --config jestconfig.json",
     "prepare": "npm run build",
