--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "tslint -p tsconfig.json"
   },
   "files": [
-    "lib/**/*"
+    "lib/*"
   ],
   "repository": {
     "type": "git",
