--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "main": "lib",
   "types": "lib/index.d.ts",
   "scripts": {
-    "test": "jest --config jestconfig.json",
     "prepare": "npm run build",
     "build": "tsc",
     "example": "nodemon lib/example.js",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "tslint -p tsconfig.json"
+    "lint": "tslint -p tsconfig.json",
+    "commit": "git add . && git commit -am"
   },
   "files": [
     "lib/*"
@@ -35,10 +34,6 @@
   },
   "homepage": "https://github.com/delesslin/coolors-io#readme",
   "devDependencies": {
-    "@types/jest": "^26.0.0",
-    "jest": "^26.0.1",
-    "prettier": "^2.0.5",
-    "ts-jest": "^26.1.0",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.9.5"
