--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "add": "git add .",
     "precommit": "npm run add",
     "commit": "git commit -am $npm_config_msg",
-    "update": "npm run commit $npm_config_msg && npm version patch -m $npm_config_msg",
+    "version": "npm version patch -m $npm_config_msg",
+    "update": "npm run commit",
     "publish": "npm run commit && git push origin master && npm publish"
   },
   "files": [
